--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,14 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
 .App {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-
-  /* border: 3px solid green; */
 }
 
 .homepage,
@@ -17,14 +15,8 @@
 .activities-container,
 .contact-container {
   flex: 1;
-
-  /* border: 3px solid yellow; */
 }
 
 footer {
   flex-shrink: 0;
-
-  /* border: 2px solid brown; */
-
-  /* color: red; */
 }
